Web services nearly done

--- a/unit5/rebar.config
+++ b/unit5/rebar.config
@@ -1,7 +1,8 @@
 {erl_opts, [debug_info]}.
 {deps, [ {cowboy, {git, "https://github.com/ninenines/cowboy.git", {branch, "master"}}}
        , {pgo, {git, "https://github.com/tsloughter/pgo.git", {branch, "master"}}}
-       , jsx  
+       , jsx
+       , {tempo, {git, "https://github.com/selectel/tempo", {branch, "master"}}}
        ]
 }.
 
