--- a/unit6/config/sys.config
+++ b/unit6/config/sys.config
@@ -2,9 +2,9 @@
   {unit6, []}
 , {pgo, [{pools, [{default, #{ pool_size => 10
                              , host => "127.0.0.1"
-                             , database => "blog"
-                             , user => "roblaing"
-                             % , password => "my_password"
+                             , database => "my_database"
+                             , user => "my_username"
+                             , password => "my_password"
                              }
                    }
                   ]
