--- a/unit7/rebar.config
+++ b/unit7/rebar.config
@@ -1,5 +1,6 @@
 {erl_opts, [debug_info]}.
 {deps, [ {gun, {git, "https://github.com/ninenines/gun", {branch, "master"}}}
+       , {cowboy, {git, "https://github.com/ninenines/cowboy.git", {branch, "master"}}}
        ]
 }.
 
