User authentication with improved Javascript promises

--- a/unit4/config/sys.config
+++ b/unit4/config/sys.config
@@ -1,6 +1,6 @@
 [
-  {unit4, []},
-  {pgo, [{pools, [{default, #{ pool_size => 10
+  {unit4, []}
+, {pgo, [{pools, [{default, #{ pool_size => 10
                              , host => "127.0.0.1"
                              , database => "my_database"
                              , user => "user_name"
