--- a/unit4/config/sys.config
+++ b/unit4/config/sys.config
@@ -3,7 +3,7 @@
 , {pgo, [{pools, [{default, #{ pool_size => 10
                              , host => "127.0.0.1"
                              , database => "my_database"
-                             , user => "user_name"
+                             , user => "my_username"
                              , password => "my_password"
                              }
                    }
